# hamilton

./: .asf.yaml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
.claude-plugin/: CHANGELOG.md  README.md  plugin.json
contrib/: README.md  setup.py
docs/: README.md  conf.py  index.md  main.md
examples/: validate_examples.py
hamilton/: ad_hoc_utils.py  async_driver.py  base.py  driver.py  graph.py  graph_types.py  graph_utils.py  htypes.py  models.py  node.py  registry.py  telemetry.py
plugin_tests/: README.md
scripts/: add_license_headers.py  apache_release_helper.py  build_conda.sh  check_license_headers.py  promote_rc.sh  update_blogs_in_learning_resources.py
tests/: nodes.py  test_base.py  test_common.py  test_default_data_quality.py  test_dev_utils.py  test_end_to_end.py  test_graph.py  test_hamilton_driver.py  test_node.py  test_parallel_graceful.py  test_telemetry.py  test_type_utils.py
ui/: README.md  buildx_and_push.sh  common.sh  dev.sh  run.sh  stop.sh
ui/sdk/: .pre-commit-config.yaml  README.md  developer_setup.md  pyproject.toml  requirements-dev.txt  requirements-test.txt
ui/sdk/.github/workflows/: unit-tests.yml
ui/sdk/src/hamilton_sdk/: adapters.py  driver.py
ui/sdk/src/hamilton_sdk/api/: clients.py
ui/sdk/src/hamilton_sdk/cli/: initialize.py
ui/sdk/src/hamilton_sdk/cli/templates/time_series_feature_engineering/components/: _run.py
ui/sdk/src/hamilton_sdk/tracking/: data_observation.py  dataframe_stats.py  example_tracking.py  ibis_stats.py  langchain_stats.py  numpy_stats.py  pandas_col_stats.py  pandas_stats.py  polars_col_stats.py  polars_stats.py  pydantic_stats.py  pyspark_stats.py  runs.py  scikit_learn_stats.py  trackingtypes.py  utils.py
ui/sdk/tests/: test_adapters.py  test_driver.py  test_tracking.py
ui/sdk/tests/resources/: parallel_dag.py  parallel_dag_error.py
ui/sdk/tests/tracking/: test_dataframe_stats.py  test_ibis_stats.py  test_pandas_col_stats.py  test_pandas_stats.py  test_polars_stats.py  test_pydantic_stats.py  test_runs.py  test_utils.py
(+516 files in other folders)
