[build-system]
requires = ["setuptools >= 61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sf-hamilton-sdk"
description = "Hamilton SDK for reading and writing to the Hamilton backend APIs that support the UI."
authors = [
    {name = "Stefan Krawczyk", email = "stefank@cs.stanford.edu"},
    {name = "Elijah ben Izzy", email = "elijah@dagworks.io"}
]
readme = "README.md"
keywords = ["hamilton", "dagworks", "observability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]
requires-python = ">=3.10, <4"
dynamic = ["dependencies", "optional-dependencies", "version"]

[project.urls]
"Homepage" = "https://github.com/apache/hamilton/"
"Bug Reports" = "https://github.com/apache/hamilton/issues"
"Source" = "https://github.com/apache/hamilton/ui/sdk"
"Documentation" = "https://hamilton.apache.org/"

[project.scripts]
hamilton-sdk = "hamilton_sdk.cli.cli:cli"

# [project.optional-dependencies]
# Add optional dependencies here, one per line

[options]
packages = { find = { exclude = ["tests"] } }
include_package_data = true
install_requires = [
]
zip_safe = false

[tool.setuptools.package-data]
# If there are data files included in your packages that need to be
# installed, specify them here.
"hamilton_sdk.cli.templates" = [
    "common/*",
    "*/template_data.json",
    "*/data/*",
    "common/.env.jinja2",
    "*/config/*"]


[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"]}
optional-dependencies.test = { file = ["requirements-test.txt"]}
version = { attr = "hamilton_sdk.__version__" }
